[package]
name = "musig-acml"
version = "0.3.0"
authors = ["Lovesh Harchandani <lovesh.bond@gmail.com>"]
description = "MuSig"
license = "Apache-2.0"

[dependencies]
rand = "0.6"
lazy_static = "1.3.0"
log = "*"

[dependencies.amcl_wrapper]
version = "0.4"
default-features = false
features = ["secp256k1"]
